--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.aj.mtrs">
-
+    <uses-permission android:name="android.permission.NFC" />
+    <uses-permission android:name="android.permission.BIND_NFC_SERVICE" />
+    <uses-sdk android:minSdkVersion="10"></uses-sdk>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
